# kafka-stock-market-de-project

./: .gitignore  README.md  pyproject.toml
notebooks/: KafkaConsumer.ipynb  KafkaProducer.ipynb
